<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.gedsonmarcelino.LoginActivity"
    android:paddingHorizontal="24dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logo"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_background"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingHorizontal="30dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_app_name" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/edittext_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/button_background"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <View
        android:id="@+id/vw_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:background="@color/black"
        android:backgroundTint="@color/gray"
        android:paddingHorizontal="30dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />

    <TextView
        android:id="@+id/txt_or_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:paddingHorizontal="16dp"
        android:text="@string/or_continue_with"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vw_line"
        app:layout_constraintEnd_toEndOf="@+id/vw_line"
        app:layout_constraintStart_toStartOf="@+id/vw_line"
        app:layout_constraintTop_toTopOf="@+id/vw_line" />

    <LinearLayout
        android:id="@+id/btn_sign_in_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="40dp"
        android:background="@drawable/button_secondary_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_or_continue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/logo_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:text="@string/dont_have_any_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_answer"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />

    <TextView
        android:id="@+id/txt_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_question"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_google" />

</androidx.constraintlayout.widget.ConstraintLayout>
